--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,4 +2,5 @@
 <app-hero></app-hero>
 <app-about></app-about>
 <app-menu-pricing></app-menu-pricing>
+<app-team-members></app-team-members>
 <app-special-combo></app-special-combo>
