--- a/src/app/components/menu-pricing/menu-pricing.component.css
+++ b/src/app/components/menu-pricing/menu-pricing.component.css
@@ -25,6 +25,9 @@ li {
 }
 .card {
     border-radius: 0;
+    
+}
+.card1 {
     background-color: #FAF3EB;
 }
 span {
@@ -44,10 +47,68 @@ span {
     align-items: center;
     flex-wrap: wrap;
 }
+.combo-bg {
+    background-image: url('src/assets/images/img2.jpg');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 70vh;
+    background-attachment: fixed;
+    /* filter: brightness(50%); */
+    /* opacity: 0.9; */
+}
+
+.mt-container {
+    margin-bottom: -170px;
+}
+  .shop {
+    background-color: #E88F2A;
+    color: #FFFFFF;
+    border-radius: 0;
+    padding: 10px 40px 10px 40px;
+    
+  }
+  .read-more {
+    background-color: #E88F2A;
+    color: #FFFFFF;
+    border-radius: 0;
+    padding: 10px 40px 10px 40px;
+    
+  }
+  .card-wrap {
+    display: flex;
+    /* background-color: #E88F2A; */
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: center;
+    
+  }
+.card2 {
+    background-color: #E88F2A;
+    
+    padding: 20px;
+    text-align: center;
+    margin: 20px 12px;
+    width: 340px;
+    
+
+}
 @media screen and (max-width: 481px) {
     ul {
         display: block;
         justify-content: center;
         align-items: center;
     }
+   
 }
+
+@media screen and (max-width: 768px) {
+    .combo-bg {
+        
+        height: auto;
+       
+    }
+    .mt-container {
+        margin-bottom: 10px;
+    }
+  }
