--- a/src/app/components/menu-pricing/menu-pricing.component.html
+++ b/src/app/components/menu-pricing/menu-pricing.component.html
@@ -21,7 +21,7 @@
 </div>
 <br><br>
 <div class="container wrapperCard">
-  <div class="card mb-3" style="max-width: 540px;" *ngFor="let item of listData let i = index;">
+  <div class="card card1 mb-3" style="max-width: 540px;" *ngFor="let item of listData let i = index;">
     <div class="row g-0">
       <div class="col-md-3">
         <img [src]=item.img class="img-fluid" alt="...">
@@ -36,5 +36,70 @@
       </div>
     </div>
   </div>
+</div>
+<br><br>
+
+
+<div class="container mt-container">
+<div class="card-wrap">
+
+    <div class="card2 card">
+      <div class="card-title  pt-5">
+        <h3>BIRTHDAY CAKE</h3>
+      </div>
+      <div class="card-body">
+        <p class="text-white ">Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet kasd lorem dolor ipsum</p>
+        <button class="btn shop ">READ MORE <i class="bi bi-arrow-right"></i></button>
+      </div>
+   
+  </div>
+ 
+    <div class="card2 card">
+      <div class="card-title  pt-5">
+        <h3>BIRTHDAY CAKE</h3>
+      </div>
+      <div class="card-body">
+        <p class="text-white ">Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet kasd lorem dolor ipsum</p>
+        <button class="btn shop ">READ MORE <i class="bi bi-arrow-right"></i></button>
+      </div>
+  
+  </div>
+ 
+    <div class="card2 card">
+      <div class="card-title  pt-5">
+        <h3>BIRTHDAY CAKE</h3>
+      </div>
+      <div class="card-body">
+        <p class="text-white ">Ipsum ipsum clita erat amet dolor sit justo sea eirmod diam stet sit justo amet tempor amet kasd lorem dolor ipsum</p>
+        <button class="btn read-more">READ MORE <i class="bi bi-arrow-right"></i></button>
+      </div>
+    </div>
+
+</div>
+</div>
+
+
+
+
+
+<div class="container-fluid combo-bg pt-5">
+  <div class="container pt">
+    <br><br>
+      <h1 class="text-center text-white">
+        30% DISCOUNT FOR THIS SUMMER
+
+      </h1>
+        
+       <div class="text-center">
+        <div class="container px-5">
+          <h1 class="text-white">
+          </h1><br>
+        </div>
+          <div class="">
+              <button class="btn shop mx-2">Order Now</button>
+          </div><br>
+       </div>
+  </div>
+ 
 </div>
 <br><br>
