--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="col-md-12">
   
        <div class="contact-bg">
         <h1 class="page-heading">CONTACT US</h1>
@@ -6,8 +6,8 @@
 
 </div>
    <div class="container margin-space">
-   <div class="row">
-    <div class="col-md-4">
+   <div class="wrapper">
+   
         <div class="card text-center">
             <div class="border p-5 m-3">
                 <div class="">
@@ -17,9 +17,9 @@
                 <p class="text-white">123 Street, New York, USA
                 </p>
             </div>
-        </div>
+       
     </div>
-    <div class="col-md-4">
+   
         <div class="card text-center">
             <div class="border p-5 m-3">
                 <div class="">
@@ -30,9 +30,9 @@
 
                 </p>
             </div>
-        </div>
+       
     </div>
-    <div class="col-md-4">
+   
         <div class="card text-center">
             <div class="border p-5 m-3">
                 <div class="">
@@ -45,7 +45,6 @@
                 </p>
             </div>
         </div>
-    </div>
    </div>
    </div>    
 
