--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -4,3 +4,4 @@
 <app-menu-pricing></app-menu-pricing>
 <app-team-members></app-team-members>
 <app-special-combo></app-special-combo>
+<app-testimonials></app-testimonials>
