--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -60,26 +60,25 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mx-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" routerLink="">HOME</a>
+            <a class="nav-link active" aria-current="page" routerLink="/home">HOME</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" routerLink="/about">ABOUT US</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="">MENU PRICING</a>
+            <a class="nav-link" routerLink="/menu">MENU PRICING</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" routerLink="">MASTER CHEFS</a>
+            <a class="nav-link" routerLink="master-chefs">MASTER CHEFS</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" routerLink="" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+            <a class="nav-link dropdown-toggle"  role="button" data-bs-toggle="dropdown" aria-expanded="false">
               PAGES
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" routerLink="">Action</a></li>
-              <li><a class="dropdown-item" routerLink="">Another action</a></li>
-              <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" routerLink="">Something else here</a></li>
+              <li><a class="dropdown-item" routerLink="/our-services">Our Services</a></li>
+              <li><a class="dropdown-item" routerLink="/testimonials">Testimonials</a></li>
+              
             </ul>
           </li>
           <li class="nav-item">
